# rdkit-mcp-server

./: .bumpversion.cfg  .gitignore  CONTRIB.md  Dockerfile  README.md  list_tools.py  promptfooconfig.yaml  pyproject.toml  python_provider.py  register_tools.py  run_client.py  run_server.py  settings.example.yaml  settings.py
.github/workflows/: bump-version-number.yaml  linter.yaml  linter.yml  pytest.yml  run-evals.yaml  unittests.yaml
app/: settings.py
clients/: openai.py
evals/: batch_comparison_dataset.py  dataset.py  evaluators.py  python_provider.py  rdkit_dataset.py  run_evals.py  task.py
promptfoo/: promptfooconfig.yaml  python_provider.py
rdkit_mcp/: __init__.py  app.py  base_tools.py  batch_tools.py  decorators.py  register_tools.py  settings.py  types.py  utils.py
rdkit_mcp/Chem/: Descriptors.py  Draw.py  rdDistGeom.py  rdMMPA.py  rdMolDescriptors.py
rdkit_mcp/Chem/Scaffolds/: MurckoScaffold.py
rdkit_mcp/Chem/rdchem/: Mol.py
rdkit_mcp/DataStructs/: TanimotoSimilarity.py
rdkit_mcp/rdkit/: __init__.py
rdkit_mcp/rdkit/Chem/: AllChem.py  Descriptors.py  Draw.py  rdMMPA.py  rdMolDescriptors.py
rdkit_mcp/rdkit/Chem/Scaffolds/: MurckoScaffold.py
rdkit_mcp/rdkit/DataStructs/: TanimotoSimilarity.py
rdkit_mcp/tools/: base_tools.py  register_tools.py  types.py  utils.py
rdkit_mcp_clients/: openai.py
rdkit_mcp_server/rdkit/Chem/: rdMMPA.py
rdkit_mcp_server/rdkit/Chem/Scaffolds/: MurckoScaffold.py
rdkit_mcp_server/rdkit_mcp/Chem/: Descriptors.py
rdkit_mcp_server/tools/: base_tools.py  register_tools.py
server/: run.py
src/clients/: mcp_client.py  openai.py
src/mcp_client/: client.py
src/rdkit_mcp_server/: __main__.py  server.py  tools.py
src/rdkit_mcp_server/rdkit/Chem/: Descriptors.py
src/rdkit_mcp_server/rdkit/Chem/Descriptors/: tools.py
src/rdkit_mcp_server/tools/: __init__.py  base_tools.py  decorators.py  register_tools.py  tool_registry.py  tools.py  utils.py
src/rdkit_mcp_server/tools/rdkit/: __init__.py
src/rdkit_mcp_server/tools/rdkit/Chem/: AllChem.py  Descriptors.py  rdMMPA.py  rdMolDescriptors.py
tests/: test_base_tools.py  test_compute_descriptors.py  test_list_tools.py  test_rdDistGeom.py
