[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rdkit-mcp-server"
version = "0.1.1"
description = "MCP Server providing RDKit cheminformatics tools."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" } # Optional: Add a license file if desired
authors = [
    { name = "Your Name", email = "your.email@example.com" }, # Replace with actual details
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Framework :: AsyncIO",
]
dependencies = [
    "mcp==1.9.0", # The MCP SDK
    "rdkit==2025.3.1",              # RDKit library (installation might need specific handling)
    "Pillow==11.2.1",             # For image generation with RDKit
    "openai-agents==0.0.14",
    "pyyaml"
]

[project.urls]
Homepage = "https://github.com/yourusername/rdkit-mcp-server" # Replace with actual URL
Repository = "https://github.com/yourusername/rdkit-mcp-server" # Replace with actual URL

[project.scripts]
rdkit-mcp-server = "rdkit_mcp_server.__main__:main" # If we want a console script

[tool.hatch.build.targets.wheel]
packages = ["src/rdkit_mcp_server"]
